doc and some other changes

--- a/requirements_core.txt
+++ b/requirements_core.txt
@@ -9,10 +9,14 @@ crewai-tools==0.47.1
 
 # LangChain + Gemini (Google Generative AI)
 langchain-google-genai
+langchain-community
 google-generativeai
 
 # PDF Processing
 pypdf2
+
+# Database and Utilities
+tabulate
 
 # Environment Variables
 python-dotenv
